[gd_scene load_steps=18 format=2]

[ext_resource path="res://levels/margarita/scripts/restinga.gd" type="Script" id=1]
[ext_resource path="res://import/2d/overlays/river_water_overlay.jpg" type="Texture" id=2]
[ext_resource path="res://scripts/level_timer.gd" type="Script" id=3]
[ext_resource path="res://assets/geometry/margarita/restinga.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/player.tscn" type="PackedScene" id=6]
[ext_resource path="res://import/audio/ticks/loopable-ticking-clock.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/geometry/detail/boat.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/pause_screen.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/speedrun_endscreen.tscn" type="PackedScene" id=15]
[ext_resource path="res://import/fonts/SyneMono-Regular.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://assets/materials/clouds_spatial_shader.tres" type="Material" id=18]
[ext_resource path="res://assets/geometry/detail/clouds.tres" type="ArrayMesh" id=19]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 16 )

[sub_resource type="Animation" id=2]
resource_name = "Fade Out"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("lap_popup_label:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("lap_popup_label:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("lap_popup_label:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("lap_popup_label:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 2 )
}

[sub_resource type="Animation" id=3]
resource_name = "Invisible"
length = 0.1
tracks/0/type = "bezier"
tracks/0/path = NodePath("lap_popup_label:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("lap_popup_label:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("lap_popup_label:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("lap_popup_label:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 16 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 21.0684, 4, 88.6145 )

[node name="Spatial" type="Spatial"]

[node name="Environment" type="Spatial" parent="."]

[node name="Sun" type="DirectionalLight" parent="Environment"]
transform = Transform( -0.809017, 0.33714, -0.481485, 0, 0.819152, 0.573576, 0.587785, 0.464033, -0.662708, 0, 10, 0 )
light_color = Color( 1, 0.866667, 0.470588, 1 )
light_energy = 1.5
shadow_enabled = true
shadow_bias = -0.02
directional_shadow_split_1 = 0.075

[node name="Spawn" type="Spatial" parent="."]
transform = Transform( 0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 1.06086, 9.15176 )

[node name="Player" parent="Spawn" instance=ExtResource( 6 )]

[node name="Level" type="Spatial" parent="." groups=[
"current_level",
]]
script = ExtResource( 1 )

[node name="Foreground" type="Control" parent="Level"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Level/Foreground"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Level/Foreground/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="Control" type="Control" parent="Level/Foreground/MarginContainer/HBoxContainer"]
margin_right = 980.0
margin_bottom = 560.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Level/Foreground/MarginContainer/HBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lap_popup_label" type="Label" parent="Level/Foreground/MarginContainer/HBoxContainer/Control/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 980.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="lap_popup_animation" type="AnimationPlayer" parent="Level/Foreground/MarginContainer/HBoxContainer/Control/VBoxContainer"]
autoplay = "Invisible"
"anims/Fade Out" = SubResource( 2 )
anims/Invisible = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Level/Foreground/MarginContainer/HBoxContainer"]
margin_left = 984.0
margin_right = 984.0
margin_bottom = 560.0
size_flags_vertical = 3

[node name="lap_label" type="Label" parent="Level/Foreground/MarginContainer/HBoxContainer/VBoxContainer"]
margin_bottom = 30.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="timer_label" type="Label" parent="Level/Foreground/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="general_timer" type="Timer" parent="Level/Foreground/MarginContainer/HBoxContainer/VBoxContainer/timer_label"]
wait_time = 0.1

[node name="audioplayer_timer" type="AudioStreamPlayer" parent="Level/Foreground/MarginContainer/HBoxContainer/VBoxContainer/timer_label"]
stream = ExtResource( 7 )

[node name="river_water_overlay" type="TextureRect" parent="Level/Foreground"]
visible = false
modulate = Color( 1, 1, 1, 0.345098 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -340.0
margin_right = 512.0
margin_bottom = 340.0
texture = ExtResource( 2 )

[node name="Terrain" type="Spatial" parent="Level"]

[node name="restinga_geometry" parent="Level/Terrain" instance=ExtResource( 4 )]

[node name="water_area" type="Area" parent="Level/Terrain"]

[node name="CollisionShape" type="CollisionShape" parent="Level/Terrain/water_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.54474, -4, -68.5223 )
shape = SubResource( 5 )

[node name="Goals" type="Spatial" parent="Level"]

[node name="Detail" type="Spatial" parent="Level"]

[node name="Clouds" type="Spatial" parent="Level/Detail"]
transform = Transform( 0.964755, 0, 0.263149, 0, 1, 0, -0.263149, 0, 0.964755, 29.4488, 0, 6.87138 )

[node name="CloudsInstance" type="MeshInstance" parent="Level/Detail/Clouds"]
transform = Transform( 3, 0, 1.19209e-07, 0, 3, 0, -1.19209e-07, 0, 3, 75.5995, 61.8873, 17.6177 )
mesh = ExtResource( 19 )
material/0 = ExtResource( 18 )

[node name="CloudsInstance2" type="MeshInstance" parent="Level/Detail/Clouds"]
transform = Transform( -0.712092, 0, -2.91426, 0, 3, 0, 2.91426, 0, -0.712092, 40.8827, 64.0552, -219.181 )
mesh = ExtResource( 19 )
material/0 = ExtResource( 18 )

[node name="CloudsInstance3" type="MeshInstance" parent="Level/Detail/Clouds"]
transform = Transform( 2.54979, 0, 1.58069, 0, 3, 0, -1.58069, 0, 2.54979, -146.507, 63.5664, -67.4345 )
mesh = ExtResource( 19 )
material/0 = ExtResource( 18 )

[node name="Boats" type="Spatial" parent="Level/Detail"]
visible = false

[node name="boat" parent="Level/Detail/Boats" instance=ExtResource( 11 )]
transform = Transform( -0.663783, 0, -0.747925, 0, 1, 0, 0.747925, 0, -0.663783, -13.7414, 0.850001, 10.4541 )

[node name="boat5" parent="Level/Detail/Boats" instance=ExtResource( 11 )]
transform = Transform( -0.0696994, -0.0696419, 0.995134, -0.0107496, 0.997555, 0.0690583, -0.99751, -0.00588395, -0.0702775, 1.30665, 0.850001, 9.32943 )

[node name="boat2" parent="Level/Detail/Boats" instance=ExtResource( 11 )]
transform = Transform( -0.953122, 1.49012e-08, -0.302586, -0.0918049, 0.952863, 0.289178, 0.288323, 0.303401, -0.908195, -14.9072, 0.850001, 4.82179 )

[node name="boat4" parent="Level/Detail/Boats" instance=ExtResource( 11 )]
transform = Transform( 0.770181, -0.123147, 0.17792, 0.086743, 0.77835, 0.163239, -0.198234, -0.137863, 0.762691, 11.8724, 0.808631, -9.38677 )

[node name="boat3" parent="Level/Detail/Boats" instance=ExtResource( 11 )]
transform = Transform( -0.992738, -0.11025, 0.0360897, -0.087246, 0.935288, 0.257223, -0.0828177, 0.336276, -0.703586, -16.0968, 0.850001, 4.48315 )

[node name="boat6" parent="Level/Detail/Boats" instance=ExtResource( 11 )]
transform = Transform( -0.0292656, -0.249012, 0.726044, -0.348124, 0.910379, 0.167738, -0.936991, -0.330459, -0.0849975, -16.0968, 0.850001, -2.27314 )

[node name="Entities" type="Spatial" parent="Level"]

[node name="Audio" type="Node" parent="Level"]

[node name="end_screen" parent="." instance=ExtResource( 15 )]
pause_mode = 2
visible = false

[node name="pause_screen" parent="." instance=ExtResource( 12 )]
visible = false
[connection signal="timeout" from="Level/Foreground/MarginContainer/HBoxContainer/VBoxContainer/timer_label/general_timer" to="Level/Foreground/MarginContainer/HBoxContainer/VBoxContainer/timer_label" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Level/Terrain/water_area" to="Level" method="_on_water_area_body_entered"]
[connection signal="body_exited" from="Level/Terrain/water_area" to="Level" method="_on_water_area_body_exited"]
